--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,15 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans';
+
+body{
+    background: #87C36B;
+    margin: 0;
+    font-family: Open Sans;
+}
+
+.card{
+    background: white;
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    margin: 30vh auto;
+}
